[gd_scene load_steps=31 format=3 uid="uid://cgsn7vdlibgu6"]

[ext_resource type="Script" path="res://Scenes/color_room.gd" id="2_6g36c"]
[ext_resource type="Texture2D" uid="uid://rjdmvqp4oaoi" path="res://Assets/Room2/woodtexture.jpg" id="3_hn8ni"]
[ext_resource type="PackedScene" uid="uid://uep7g2qvqwnk" path="res://Scenes/learning_board_scene.tscn" id="3_wrl5f"]
[ext_resource type="PackedScene" uid="uid://c4eoq7cgv8c35" path="res://Scenes/TouchableWordBox.tscn" id="5_tp8qe"]
[ext_resource type="PackedScene" uid="uid://d4gq8f5epjp14" path="res://tapable_button.tscn" id="6_t21d0"]
[ext_resource type="AudioStream" uid="uid://bh482kqxqcryf" path="res://Assets/Room2/audio/red.wav" id="7_7y40d"]
[ext_resource type="AudioStream" uid="uid://dq5wf5bb0v6ia" path="res://Assets/Room2/audio/orange.wav" id="8_o7f8a"]
[ext_resource type="AudioStream" uid="uid://cvacybsyt7q6f" path="res://Assets/Room2/audio/yellow.wav" id="9_sxwnr"]
[ext_resource type="AudioStream" uid="uid://ccu6nv6gt5iu5" path="res://Assets/Room2/audio/green.wav" id="10_ed7u7"]
[ext_resource type="AudioStream" uid="uid://cj1ykiiuy3pv0" path="res://Assets/Room2/audio/blue.wav" id="11_s4jnd"]
[ext_resource type="AudioStream" uid="uid://csj5dvo227yy3" path="res://Assets/Room2/audio/purple.wav" id="12_w3v7g"]
[ext_resource type="AudioStream" uid="uid://ia86mu7lyndx" path="res://Assets/Room2/audio/Pink.wav" id="13_r6a8b"]
[ext_resource type="AudioStream" uid="uid://bheblgx4kww2s" path="res://Assets/Room2/audio/brown.wav" id="14_f1wgc"]
[ext_resource type="AudioStream" uid="uid://cuv7tj6wredvd" path="res://Assets/Room2/audio/grey.wav" id="15_wipqe"]
[ext_resource type="AudioStream" uid="uid://bssjbgyglynpg" path="res://Assets/Room2/audio/black.wav" id="16_l53yx"]
[ext_resource type="AudioStream" uid="uid://dpinrtnbbb7y4" path="res://Assets/Room2/audio/white.wav" id="17_mhiyv"]
[ext_resource type="AudioStream" uid="uid://cky17fylmep0n" path="res://Assets/Room1/Audio/12.wav" id="18_1qwl8"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="19_k0wk8"]
[ext_resource type="PackedScene" uid="uid://dxpbxoxs0dcve" path="res://Scenes/Duck.tscn" id="22_g0yvr"]
[ext_resource type="PackedScene" uid="uid://c1l6ks6oe4yw1" path="res://Scenes/InformationPanel.tscn" id="22_qdymn"]
[ext_resource type="AudioStream" uid="uid://c4bcmnw8dtcev" path="res://Assets/Room1/Audio/confirmation_001.ogg" id="26_3icvk"]
[ext_resource type="AudioStream" uid="uid://bw1blhkglqmw8" path="res://Assets/Room1/Audio/error_001.ogg" id="27_nt0r6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8y7o1"]
albedo_texture = ExtResource("3_hn8ni")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4e3tv"]

[sub_resource type="BoxMesh" id="BoxMesh_jebxl"]
material = SubResource("StandardMaterial3D_4e3tv")
size = Vector3(50, 0.2, 50)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0yggx"]
data = PackedVector3Array(-25, 0.1, 25, 25, 0.1, 25, -25, -0.1, 25, 25, 0.1, 25, 25, -0.1, 25, -25, -0.1, 25, 25, 0.1, -25, -25, 0.1, -25, 25, -0.1, -25, -25, 0.1, -25, -25, -0.1, -25, 25, -0.1, -25, 25, 0.1, 25, 25, 0.1, -25, 25, -0.1, 25, 25, 0.1, -25, 25, -0.1, -25, 25, -0.1, 25, -25, 0.1, -25, -25, 0.1, 25, -25, -0.1, -25, -25, 0.1, 25, -25, -0.1, 25, -25, -0.1, -25, 25, 0.1, 25, -25, 0.1, 25, 25, 0.1, -25, -25, 0.1, 25, -25, 0.1, -25, 25, 0.1, -25, -25, -0.1, 25, 25, -0.1, 25, -25, -0.1, -25, 25, -0.1, 25, 25, -0.1, -25, -25, -0.1, -25)

[sub_resource type="Animation" id="Animation_dv78g"]
resource_name = "Benar"
length = 0.4

[sub_resource type="Animation" id="Animation_y1faq"]
length = 0.001

[sub_resource type="Animation" id="Animation_i6fev"]
resource_name = "Salah"
length = 0.4

[sub_resource type="AnimationLibrary" id="AnimationLibrary_03xdc"]
_data = {
"Benar": SubResource("Animation_dv78g"),
"RESET": SubResource("Animation_y1faq"),
"Salah": SubResource("Animation_i6fev")
}

[node name="Color Room" type="Node3D"]
script = ExtResource("2_6g36c")
level = 1
json_file = "res://Assets/Room2/colors.json"

[node name="Static" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="Static"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.16879, 0)
material_override = SubResource("StandardMaterial3D_8y7o1")
mesh = SubResource("BoxMesh_jebxl")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Static/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Static/Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_0yggx")

[node name="LearningBoard" parent="." instance=ExtResource("3_wrl5f")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 6.40002, 0.0330462, 0.519768)

[node name="TypingBoard" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.258145, 0.966107, 0, -0.966106, 0.258144, -0.0293176, -0.148989, 2.27333)

[node name="ButtonGuess" parent="TypingBoard" instance=ExtResource("6_t21d0")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -2.23517e-07, 1, 3.79234, 1.93266, 0.228731)
text_value = "Enter"

[node name="1" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, -3, 1.5, 0.182)

[node name="2" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, -2, 1.5, 0.182)

[node name="3" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, -1, 1.5, 0.182)

[node name="4" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0, 1.5, 0.182)

[node name="5" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 1, 1.5, 0.182)

[node name="6" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 2, 1.5, 0.182)

[node name="7" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, -2.46342, 2.5, 0.182)

[node name="8" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, -1.46342, 2.5, 0.182)

[node name="9" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, -0.463423, 2.5, 0.182)

[node name="10" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0.536577, 2.5, 0.182)

[node name="11" parent="TypingBoard" instance=ExtResource("5_tp8qe")]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 1.53658, 2.5, 0.182)

[node name="Audios" type="Node3D" parent="."]

[node name="1" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("7_7y40d")

[node name="2" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("8_o7f8a")

[node name="3" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("9_sxwnr")

[node name="4" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("10_ed7u7")

[node name="5" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("11_s4jnd")

[node name="6" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("12_w3v7g")

[node name="7" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("13_r6a8b")

[node name="8" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("14_f1wgc")

[node name="9" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("15_wipqe")

[node name="10" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("16_l53yx")

[node name="11" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("17_mhiyv")

[node name="12" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("18_1qwl8")

[node name="SoalAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_03xdc")
}

[node name="ConfirmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_3icvk")

[node name="ErrorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("27_nt0r6")

[node name="info_viweport" parent="." instance=ExtResource("19_k0wk8")]
transform = Transform3D(0.198239, 0, -0.980154, 0, 1, 0, 0.980154, 0, 0.198239, 7.85167, 3.06346, 4.03472)
scene = ExtResource("22_qdymn")
viewport_size = Vector2(500, 500)
transparent = 0

[node name="model_position" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.77207)

[node name="Duck" parent="model_position" instance=ExtResource("22_g0yvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.53492, 0, 0)

[node name="Duck2" parent="model_position" instance=ExtResource("22_g0yvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.659476, 0, 0)

[node name="Duck3" parent="model_position" instance=ExtResource("22_g0yvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4033, 0, 0)

[connection signal="button_pressed" from="TypingBoard/ButtonGuess" to="." method="_on_button_guess_button_pressed"]
